--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,11 @@
 
 
     <GridLayout
+        android:id="@+id/gridLayout"
         android:layout_width="match_parent"
         android:layout_height="360dp"
-        android:background="@drawable/board"
         android:layout_centerInParent="true"
+        android:background="@drawable/board"
         android:columnCount="3"
         android:rowCount="3">
 
@@ -25,8 +26,8 @@
             android:layout_marginRight="10dp"
             android:layout_marginTop="10dp"
             android:layout_row="0"
-            android:tag="0"
-            android:onClick="dropIn" />
+            android:onClick="dropIn"
+            android:tag="0" />
 
         <ImageView
             android:id="@+id/imageView1"
@@ -36,8 +37,8 @@
             android:layout_marginLeft="30dp"
             android:layout_marginTop="10dp"
             android:layout_row="0"
-            android:tag="1"
-            android:onClick="dropIn" />
+            android:onClick="dropIn"
+            android:tag="1" />
 
         <ImageView
             android:id="@+id/imageView2"
@@ -47,8 +48,8 @@
             android:layout_marginLeft="40dp"
             android:layout_marginTop="10dp"
             android:layout_row="0"
-            android:tag="2"
-            android:onClick="dropIn"/>
+            android:onClick="dropIn"
+            android:tag="2" />
 
         <ImageView
             android:id="@+id/imageView3"
@@ -58,8 +59,8 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="30dp"
             android:layout_row="1"
-            android:tag="3"
-            android:onClick="dropIn"/>
+            android:onClick="dropIn"
+            android:tag="3" />
 
         <ImageView
             android:id="@+id/imageView4"
@@ -68,9 +69,9 @@
             android:layout_column="1"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="30dp"
+            android:layout_row="1"
             android:onClick="dropIn"
-            android:tag="4"
-            android:layout_row="1" />
+            android:tag="4" />
 
         <ImageView
             android:id="@+id/imageView5"
@@ -80,8 +81,8 @@
             android:layout_marginLeft="40dp"
             android:layout_marginTop="30dp"
             android:layout_row="1"
-            android:tag="5"
-            android:onClick="dropIn" />
+            android:onClick="dropIn"
+            android:tag="5" />
 
         <ImageView
             android:id="@+id/imageView6"
@@ -91,8 +92,8 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="30dp"
             android:layout_row="2"
-            android:tag="6"
-            android:onClick="dropIn" />
+            android:onClick="dropIn"
+            android:tag="6" />
 
         <ImageView
             android:id="@+id/imageView7"
@@ -102,8 +103,8 @@
             android:layout_marginLeft="30dp"
             android:layout_marginTop="30dp"
             android:layout_row="2"
-            android:tag="7"
-            android:onClick="dropIn" />
+            android:onClick="dropIn"
+            android:tag="7" />
 
         <ImageView
             android:id="@+id/imageView8"
@@ -113,8 +114,8 @@
             android:layout_marginLeft="40dp"
             android:layout_marginTop="30dp"
             android:layout_row="2"
-            android:tag="8"
-            android:onClick="dropIn" />
+            android:onClick="dropIn"
+            android:tag="8" />
     </GridLayout>
     <LinearLayout
         android:id="@+id/playAgainLayout"
